Fixed text spacing issues in Album View's cards.

--- a/packages/albums/albums.css
+++ b/packages/albums/albums.css
@@ -1,26 +1,27 @@
-﻿/* Cards */
-.cards-card {
+/* Cards */
+.card {
 	display: inline-block;
 	height: auto;
 	float:left;
 }
-.cards-card > div {
+.card > div {
 	margin: 20px;
 	background-color: ||background1||;
 	box-shadow: 0 1px 2px rgba(0, 0, 0, 0.3);
 	transition: box-shadow 0.1s;
 }
-.cards-card > div > div:first-child {
+.cover-art {
 	display: inline-block;
 	position: relative;
 	width: 100%;
+	vertical-align:top;
 }
-.cards-card > div > div:first-child:after {
+.cover-art:after {
 	content: '';
 	display: block;
 	margin-top: 100%;
 }
-.cards-card > div > div:first-child > div {
+.cover-art > div {
 	position: absolute;
 	top: 0;
 	bottom: 0;
@@ -30,71 +31,71 @@
 	background-position: center;
 	background-size: cover;
 }
-.cards-card > div > div:last-child {
+.album-info {
 	width: 100%;
 	height: 100%;
 	box-sizing: border-box;
-	padding: 20px;
+	padding: 15px 20px;
 }
-.cards-card > div > div:last-child > p {
+.album-info > p {
 	display: block;
 	width: auto;
 	margin: 0;
-	line-height: 2;
 	overflow: hidden;
 	text-overflow: ellipsis;
 	white-space: nowrap;
 	cursor: default;
 	font-size: 18px;
 }
-.cards-card > div > div > p > a:hover {
+.album-info a:hover {
 	text-decoration: underline;
 }
-.cards-card > div > div > p:first-child {
+.album-info .album-title {
 	font-weight: 400;
 }
-.cards-card > div > div > p:last-child {
+.album-info .album-artist {
+	margin-top:5px;
 	font-weight: 300;
 }
 
 /* Window widths */
 @media all and (max-width: 500px) {
-	.cards-card {
+	.card {
 		width: 100%;
 	}
 }
 @media all and (max-width: 800px) and (min-width: 500px) {
-	.cards-card {
+	.card {
 		width: 50%;
 	}
 }
 @media all and (max-width: 1200px) and (min-width: 800px) {
-	.cards-card {
+	.card {
 		width: 33.333%;
 	}
 }
 @media all and (max-width: 1600px) and (min-width: 1200px) {
-	.cards-card {
+	.card {
 		width: 25%;
 	}
 }
 @media all and (max-width: 2000px) and (min-width: 1600px) {
-	.cards-card {
+	.card {
 		width: 20%;
 	}
 }
 @media all and (max-width: 2200px) and (min-width: 2000px) {
-	.cards-card {
+	.card {
 		width: 16.665%;
 	}
 }
 @media all and (max-width: 2400px) and (min-width: 2200px) {
-	.cards-card {
+	.card {
 		width: 14.2857%;
 	}
 }
 @media all and (min-width: 2400px) {
-	.cards-card {
+	.card {
 		width: 12.5%;
 	}
 }
